<resources>
    <string name="app_name">记账</string>
    <string name="quitApp_toast_text">再按一次退出程序</string>
    <string name="title_tally">记账</string>
    <string name="title_particular">详细</string>
    <string name="title_summarizing">汇总</string>
    <string name="fragment_tally__income_expenses_text">收支：</string>
    <string name="spinner_income_string">收入</string>
    <string name="spinner_expenses_string">支出</string>
    <string name="fragment_tally__amount_text">金额：</string>
    <string name="fragment_tally__time_text">日期：</string>
    <string name="fragment_tally__remark_text">备注：</string>
    <string name="fragment_tally__tally_save">保存</string>
    <string name="tallyFragment_dialog_normal_more_button_content">是否保存？</string>
    <string name="tallyFragment_dialog_btn_confirm_text">是</string>
    <string name="tallyFragment_dialog_btn_cancel_text">否</string>
    <string name="tallyFragment_dialog_btn_confirm_succeed_hint_text">保存成功</string>
    <string name="tallyFragment_dialog_btn_confirm_defeated_hint_text">保存失败</string>
    <string name="tallyFragment_dialog_btn_cancel_hint_text">取消保存</string>
    <string name="incomeRecycleAdapter_dialog_normal_more_button_content">是否删除？</string>
    <string name="incomeRecycleAdapter_dialog_btn_confirm_text">是</string>
    <string name="incomeRecycleAdapter_dialog_btn_cancel_text">否</string>
    <string name="incomeRecycleAdapter_dialog_btn_confirm_succeed_hint_text">删除成功</string>
    <string name="incomeRecycleAdapter_dialog_btn_confirm_defeated_hint_text">删除失败</string>
    <string name="incomeRecycleAdapter_dialog_btn_cancel_hint_text">取消删除</string>
    <string name="incomeRecycleAdapter_dialog_text_show_particular">查看详情</string>
    <string name="incomeRecycleAdapter_dialog_text_delete_item">删除此记录</string>
    <string name="incomeRecycleAdapter_dialog_text_alter_item">修改此记录</string>
    <string name="select_error_time_toast_text">请选择正确的时间！</string>
    <string name="edit_error_year_toast_text">请输入正确的年份！</string>
    <string name="edit_error_month_toast_text">请输入正确的月份！</string>
    <string name="edit_error_day_toast_text">请输入正确的日期！</string>
    <string name="input_no_year_toast_text">请输入年份！</string>
    <string name="input_no_month_toast_text">请输入月份！</string>
    <string name="input_no_day_toast_text">请输入日期！</string>
    <string name="two_decimal_places_warning">最多输入两位小数</string>
    <string name="no_remark_amount_toast_text">请填写金额和备注。</string>
    <string name="no_remark_toast_text">请填写备注。</string>
    <string name="no_amount_toast_text">请填写金额。</string>
    <string name="max_amount_toast_text">最大金额为10000。</string>
    <string name="year_text">年</string>
    <string name="month_text">月</string>
    <string name="day_text">日</string>
    <string name="fragment_summarizing_filter_button_string">确定</string>
    <string name="fragment_particular_search_button_string">搜索</string>
    <string name="fragment_particular_no_record_string">没有记录。</string>
    <string name="total_expenditure_string">总支出</string>
    <string name="general_income_string">总收入</string>
    <string name="cancel_string">取消</string>
    <string name="confirm_string">确定</string>
    <string name="return_string">返回</string>
</resources>
